--- a/src/index.html
+++ b/src/index.html
@@ -1,12 +1,6 @@
 <!doctype html>
-<html lang="en">
 <head>
-  <meta charset="utf-8">
-  <title>BraggingRights</title>
-  <base href="/">
-
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <title>Bragging Rights Session</title>
 </head>
 <body>
   <app-root></app-root>
