Routing between views
Set up routes between views/components.
This allows navigation within the app.
Cleaned up and commented code.

--- a/src/index.html
+++ b/src/index.html
@@ -1,8 +1,12 @@
 <!doctype html>
+
 <head>
+  <base href="/">
   <title>Bragging Rights Session</title>
 </head>
+
 <body>
   <app-root></app-root>
 </body>
+
 </html>
