Added graph to timeline
Installed chart.js.
Basic graph appears on timeline.

--- a/src/index.html
+++ b/src/index.html
@@ -3,6 +3,7 @@
 <head>
   <base href="/">
   <title>Bragging Rights Session</title>
+  <script src="node_modules/chart.js/src/chart.js"></script>
 </head>
 
 <body>
