--- a/src/home/home.html
+++ b/src/home/home.html
@@ -1,4 +1,6 @@
 <h1>Bragging Rights : The Things I've Done</h1>
 <div class="bragger-div">
-  <button class="bragger-btn" *ngFor="let bragger of braggers">{{bragger.name}}</button>
+  <button class="bragger-btn" 
+          *ngFor="let bragger of braggers"
+          (click)="goToTimeline()">{{bragger.name}}</button>
 </div>
