Updated UI to have MD
Added material design styling to buttons
on home page.

--- a/src/home/home.html
+++ b/src/home/home.html
@@ -1,6 +1,6 @@
 <h1>Bragging Rights : The Things I've Done</h1>
 <div class="bragger-div">
-  <button class="bragger-btn" 
+  <button class="mdc-button--raised" 
           *ngFor="let bragger of braggers"
           (click)="goToTimeline()">{{bragger.name}}</button>
 </div>
