--- a/src/timeline/timeline.html
+++ b/src/timeline/timeline.html
@@ -1,4 +1,11 @@
-<button class="home-btn" (click)="goHome()">Home</button>
-<div style="display: block">
+<button class="mdc-button" (click)="goHome()">
+    <i class="fa fa-home" aria-hidden="true"></i>
+</button>
+<div class="timeline-grid">
+  <div class="emojis">
+      <i class="fa fa-smile-o" aria-hidden="true"></i>
+      <i class="fa fa-meh-o" aria-hidden="true"></i>
+      <i class="fa fa-frown-o" aria-hidden="true"></i>
+  </div>
   <canvas baseChart [labels]="labels" [data]="data" [colors]="colorsUndefined" [chartType]="type"></canvas>
 </div>
