--- a/src/timeline/timeline.html
+++ b/src/timeline/timeline.html
@@ -3,9 +3,9 @@
 </button>
 <div class="timeline-grid">
   <div class="emojis">
-      <i class="fa fa-smile-o" aria-hidden="true"></i>
-      <i class="fa fa-meh-o" aria-hidden="true"></i>
-      <i class="fa fa-frown-o" aria-hidden="true"></i>
+    <i class="fa fa-smile-o" aria-hidden="true"></i>
+    <i class="fa fa-meh-o" aria-hidden="true"></i>
+    <i class="fa fa-frown-o" aria-hidden="true"></i>
   </div>
-  <canvas baseChart [labels]="labels" [data]="data" [colors]="colorsUndefined" [chartType]="type"></canvas>
+  <canvas baseChart [labels]="yAxis" [datasets]="xAxis" [colors]="chartColors" [chartType]="chartType" [options]="chartOptions"></canvas>
 </div>
