Started process of allocating data
Created a JSON file with data for each bragger.
I want to use this JSON file to pass in each
bragger's data to build their timeline when
their button is clicked.

--- a/src/home/home.html
+++ b/src/home/home.html
@@ -2,5 +2,5 @@
 <div class="bragger-div">
   <button class="mdc-button--raised" 
           *ngFor="let bragger of braggers"
-          (click)="goToTimeline()">{{bragger.name}}</button>
+          (click)="goToTimeline($event)">{{bragger.name}}</button>
 </div>
