--- a/src/timeline/timeline.html
+++ b/src/timeline/timeline.html
@@ -7,5 +7,5 @@
     <i class="fa fa-meh-o" aria-hidden="true"></i>
     <i class="fa fa-frown-o" aria-hidden="true"></i>
   </div>
-  <canvas baseChart [labels]="yAxis" [datasets]="xAxis" [colors]="chartColors" [chartType]="chartType" [options]="chartOptions"></canvas>
+  <canvas baseChart [chartType]="chartType" [labels]="xAxis" [datasets]="yAxis" [legend]="chartLegend" [options]="chartOptions" [colors]="chartColors"></canvas>
 </div>
