Styled title on home page

--- a/src/home/home.html
+++ b/src/home/home.html
@@ -1,4 +1,8 @@
-<h1>Bragging Rights : The Things I've Done</h1>
+<div class="title-div">
+  <h1>Bragging Rights</h1>
+  <h3>My Highs and Lows </h3>
+</div>
+
 <div class="bragger-div">
   <button class="mdc-button--raised" 
           *ngFor="let bragger of braggers"
