--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,7 @@
   <base href="/">
   <title>Bragging Rights Session</title>
   <script src="node_modules/chart.js/src/chart.js"></script>
+  <link rel="icon" type="image/x-icon" href="./assets/img/favicon.png"
 </head>
 
 <body>
