--- a/src/index.html
+++ b/src/index.html
@@ -1,10 +1,11 @@
 <!doctype html>
 
 <head>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <base href="/">
   <title>Bragging Rights Session</title>
   <script src="node_modules/chart.js/src/chart.js"></script>
-  <link rel="icon" type="image/x-icon" href="./assets/img/favicon.png"
+  <link rel="icon" type="image/x-icon" href="./assets/img/favicon.png">
 </head>
 
 <body>
