--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <base href="https://ambyrshae.github.io/bragging-rights/">
+  <base href="/">
   <title>Bragging Rights Session</title>
   <script src="node_modules/chart.js/src/chart.js"></script>
   <link rel="icon" type="image/x-icon" href="./assets/img/favicon.png">
