--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,7 @@
   <title>Bragging Rights Session</title>
   <script src="node_modules/chart.js/src/chart.js"></script>
   <link rel="icon" type="image/x-icon" href="./assets/img/favicon.png">
+  <link rel="preload" as="image" href="./assets/img/default.png">
 </head>
 
 <body>
